--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
     <module>spring-boot-module</module>
     <module>test</module>
     <module>open-api-module</module>
+    <module>spring-batch</module>
 
   </modules>
     	
