--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,11 @@
     <!-- Add more modules as needed -->
           
     
-    <module>spring-boot-module</module>
+    <module>bytecoder-module</module>
     <module>test</module>
     <module>open-api-module</module>
     <module>spring-batch</module>
+    <module>Oauth2-module</module>
 
   </modules>
     	
