--- a/com.bytecoder.api/pom.xml
+++ b/com.bytecoder.api/pom.xml
@@ -33,10 +33,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-              <dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.oneapi</groupId>
+            <artifactId>open-api-module</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+          <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>5.0.0-alpha.1</version>
         </dependency>
     </dependencies>
 </project>
