--- a/open-api-module/pom.xml
+++ b/open-api-module/pom.xml
@@ -8,8 +8,10 @@
         <artifactId>design.patterns</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
+    <groupId>com.oneapi</groupId>
     <artifactId>open-api-module</artifactId>
+    <version>0.0.3</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
