notes are updated

--- a/module1/src/main/resources/application.properties
+++ b/module1/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+Blog {
+id: number;
+title: string;
+description: string;
+date: string;
+readTime: string;
+platform: 'medium' | 'dev';
+link: string;
+tags: string[];
+content?: string;
+}
 
+{
+title: string;
+description: string;
+tags: string[];
+content?: string;
+}
