updated tree notes

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+
+Implemented configuration-driven development and built multiple key features,  enhancing system flexibility and client onboarding efficiency.
